S25029301301-738 运行态BPM菜单列表仅显示非隐藏菜单项